crates/aiken-lang/src/tests/snapshots/format_grouped_expression_3.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn foo() {\n  { x |> f } == y\n}\n"
---
fn foo() {
  ( x |> f ) == y
}

