crates/aiken-lang/src/tests/snapshots/format_if_soft_cast.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\npub fn foo(a) {\n  if a is Option<Int> { 14 } else { 42 }\n  }\n"
---
pub fn foo(a) {
  if a is Option<Int> {
    14
  } else {
    42
  }
}
