crates/aiken-lang/src/tests/snapshots/format_logic_op_with_code_block.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn foo() {\n  True || {\n    let bar = 1\n    bar == bar\n  }\n}\n"
---
fn foo() {
  True || {
    let bar = 1
    bar == bar
  }
}

