crates/aiken-lang/src/tests/snapshots/format_logical_op_chain.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn smth() { and { foo, bar, or { bar, foo }} }\n"
---
fn smth() {
  and {
    foo,
    bar,
    or {
      bar,
      foo,
    },
  }
}

